--- a/media-query-example1.css
+++ b/media-query-example1.css
@@ -1,26 +1,75 @@
+html {
+    box-sizing: border-box;
+}    
+
 body {
-    font-size: 20px;
-    margin: 2px;
+    font-size: 1.8em;
+    margin: 5%;
 }
+
 h1 {
-    font-size: 8px;
+    font-size: 0.7em;
 }
-h2 {}
+
+h2 {
+    font-size: 1.5em;
+}
 
 img {
 	max-width: 100%;
 }
 
 figure {
-	margin: 0;
+	margin: 10px;
+    text-align: center;
 }
 
-#title {
-    color: blue;
+@media screen and (min-width: 768px) {
+    body {
+        background-color: pink;
+        margin: 20px 3%;
+        font-size: 1.2em;  
+        /* display: grid;
+        grid-template-columns: 1fr 1fr; */
+    }
+
+    h1 {
+        font-size: 1.7em;
+    }
+
+    h2 {
+        font-size: 1.5em;
+    }
+
+    /* h1,
+    p,
+    h2 {
+        grid-column: 1/3;
+    } */
+
+    figure {
+        display: inline-block;
+        width: 45%;
+    }
 }
 
-#body1 {
-    color: orange;
-}
+@media screen and (min-width: 1110px) {
+    body {
+        background-color: darksalmon;
+        font-size: 1.5em;
+        margin: 30px 3%;
+        max-width: 1200px;
+    }
 
-@media screen and (min-width: )
+    h1 {
+        font-size: 2em;
+    }
+
+    h2 {
+        font-size: 1.7em;
+    }
+
+    figure {
+        width: 30%;
+    }
+}
