--- a/media-query-example1.css
+++ b/media-query-example1.css
@@ -24,10 +24,10 @@ figure {
     text-align: center;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 750px) {
     body {
-        background-color: pink;
-        margin: 20px 3%;
+        background-color: greenyellow;
+        margin: 25px 3%;
         font-size: 1.2em;  
         /* display: grid;
         grid-template-columns: 1fr 1fr; */
@@ -53,12 +53,12 @@ figure {
     }
 }
 
-@media screen and (min-width: 1110px) {
+@media screen and (min-width: 1200px) {
     body {
-        background-color: darksalmon;
+        background-color: cyan;
         font-size: 1.5em;
-        margin: 30px 3%;
-        max-width: 1200px;
+        margin: 35px 3%;
+        max-width: 1300px;
     }
 
     h1 {
